# DR_pi

./: CMakeLists.txt  CMakeLists.txt.bak  DR_pi.fbp  DR_pi.fbp.as.dialog.fbp  INSTALL.md  Plugin.cmake  README.md  leamas.DR.bat
.circleci/: config.yml
cmake/: AndroidLibs.cmake  Metadata.cmake  PluginCompiler.cmake  PluginOptions.cmake  TemplateVersion
flatpak/: org.opencpn.OpenCPN.Plugin.DR.yaml
manual/: antora.yml
manual/dead_reckoning/: antora.yml
manual/dead_reckoning/modules/ROOT/pages/: dead_reckoning.adoc
po/: ar_SA.po
src/: DR_pi.cpp  DR_pi.h  DRgui.cpp  DRgui.h  DRgui_impl.cpp  DRgui_impl.h  icons.cpp
